maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:43: warning: enclosing method getBisctuit has result type Unit: return value discarded
        return tracechemin(i,j,0);
        ^JediEscaper:86: error: type mismatch;
 found   : Unit
 required: Boolean
  if(getBisctuit()){
                ^